2002-02-11  Matti Aarnio  <mea@zmailer.org>

	* scheduler/transport.c:
	    Match the mailq socket tcp-wrapper behaviour to that of
	    what the man-page says -- "tcp-wrapper is not used for
	    MAILQ-v2 type sockets".

	* SiteConfig.in:
	    By default publish  SCHEDULERDIRHASH=1  value.
	    Publish also  SCHEDULERNOTIFY=  and ROUTERNOTIFY=
	    variables, which are used by the notifier codes.

	* include/libc.h, transports/libta/nonblocking.c:
	    Moved the non-blocking code to be macro in  libc.h.
	    At some places a #include <fcntl.h> is needed before
	    #include "libc.h".

	* include/ta.h, scheduler/mq2.c, scheduler/transport.c,
	  transports/libta/warning.c:
	    The preceding fd-blocking macro thing affected these
	    files.  (Other usage places already did suitable #includes)

	* libc/mail.c, libc/sfmail.c, router/daemonsub.c:
	    If ROUTERNOTIFY is defined in  zmailer.conf, then
	    mail_close() (not .._alternative() !) will presume
	    there might exist an AF_UNIX socket with that name
	    into which a notification message about a new job
	    can be sent.

	* router/rfc822.c, scheduler/transport.c:
	    The Scheduler Notify socket got changed to use  SCHEDULERNOTIFY=
	    ZENV variable, and be AF_UNIX socket.

2002-02-07  Matti Aarnio  <mea@zmailer.org>

	* scheduler/scheduler.c, scheduler/conf.c, scheduler/prototypes.h,
	  scheduler/transport.c:
	    Implemented a 'notifysocket', which is an UDP socket (mailq/udp)
	    receiving simple "NEW X/Y/123-456" text lines, and verifying
	    the inputs a bit..  Perhaps should have this configurable,
	    so that the system could have multiple schedulers around.

	* scheduler/scheduler.c:
	    Reworked  2001-10-27 Stephen <steve@activemessage.com>
	    scheduler queue rescan timer thing into less magic..

2002-02-05  Matti Aarnio  <mea@zmailer.org>

	* router/db.c, proto/cf/p-routes.cf, router/libdb/search.h:
	    Support _multiple_ instances of fallback keys, e.g.: