@@ -604,7 +604,12 @@ _sfmail_close_(fp,inop, mtimep)
 	  if (s) *s = ':';
 
 	  sendto(notifysocket, buf, strlen(buf),
-		 MSG_DONTWAIT|MSG_NOSIGNAL,
+#ifdef MSG_NOSIGNAL
+		 MSG_NOSIGNAL|
+#else
+		 /* FIXME: URGH! WILL WE HAVE SIGPIPE PROBLEMS ??? */
+#endif
+		 MSG_DONTWAIT ,
 		 (struct sockaddr *)&sad, sizeof(sad));
 
 	  close(notifysocket);
